<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/holo_blue_dark"
    tools:context=".Add_Mission_Fragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_mission"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/missionName"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-220dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_mission_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/enterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <TableLayout
            android:id="@+id/tableLayerCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052">

        </TableLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="17dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@android:color/background_light"
        app:backgroundTint="@android:color/holo_red_dark"
        app:fabCustomSize="@android:dimen/notification_large_icon_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_input_delete" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@android:color/background_light"
        android:clickable="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="177dp"
        app:backgroundTint="#084D99"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="330dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@android:color/background_light"
        app:backgroundTint="@android:color/holo_green_dark"
        app:fabCustomSize="@android:dimen/notification_large_icon_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:text="Repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="190dp"
        />

    <CheckBox
        android:id="@+id/Sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="144dp"
        android:onClick="onCheckboxClicked"
        android:text="S"
        android:textColor="#FCFBFB" />

    <CheckBox
        android:id="@+id/Monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="144dp"
        android:onClick="onCheckboxClicked"
        android:text="M"
        android:textColor="#FCFBFB" />

    <CheckBox
        android:id="@+id/Tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="144dp"
        android:onClick="onCheckboxClicked"
        android:text="T"
        android:textColor="#FCFBFB" />

    <CheckBox
        android:id="@+id/Wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="144dp"
        android:onClick="onCheckboxClicked"
        android:text="W"
        android:textColor="#FCFBFB" />

    <CheckBox
        android:id="@+id/Thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="230dp"
        android:layout_marginBottom="144dp"
        android:onClick="onCheckboxClicked"
        android:text="Th"
        android:textColor="#FCFBFB" />

    <CheckBox
        android:id="@+id/Friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="144dp"
        android:onClick="onCheckboxClicked"
        android:text="F"
        android:textColor="#FCFBFB" />

    <CheckBox
        android:id="@+id/Saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="330dp"
        android:layout_marginBottom="144dp"
        android:onClick="onCheckboxClicked"
        android:text="S"
        android:textColor="#FCFBFB" />

    <Button
        android:id="@+id/date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="255dp"
        android:layout_marginBottom="240dp"
        android:text="@string/date"
        android:textSize="12sp" />

    <Button
        android:id="@+id/time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="240dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/time"
        android:textSize="12sp" />

    <Button
        android:id="@+id/duration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="240dp"
        android:text="@string/duration"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="217dp"
        android:text="" />

    <TextView
        android:id="@+id/duration_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="217dp"
        android:text="" />

    <TextView
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="255dp"
        android:layout_marginBottom="217dp"
        android:text="" />
</FrameLayout>